fix(core): character descenders overflow the line

--- a/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
+++ b/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
@@ -1,14 +1,23 @@
 :host {
     position: absolute;
     display: block;
-    height: 1.25rem;
-    line-height: 1;
+    height: 2.5rem;
+    line-height: 2.25;
     width: 100%;
-    margin: -1.25rem 0;
-    padding: 0.625rem 0;
+    margin: -1.15rem 0;
     box-sizing: content-box;
-    color: var(--tui-text-01);
+    color: var(--tui-text-03); // @note: override color of text ellipsis
     animation: tuiPresent 1s;
+    vertical-align: middle;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    &:after {
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%;
+    }
 
     &._table {
         position: static;
@@ -16,13 +25,6 @@
 
     :host-context(tui-textfield[data-mode='onDark']) & {
         color: var(--tui-text-01-night);
-    }
-
-    &:after {
-        content: '';
-        display: inline-block;
-        vertical-align: middle;
-        height: 100%;
     }
 }
 
@@ -34,12 +36,11 @@
 
 .t-prefix,
 .t-postfix {
+    color: var(--tui-text-01);
     white-space: pre;
 }
 
 .t-filler {
-    overflow: hidden;
-    color: var(--tui-text-03);
     text-overflow: ellipsis;
     max-width: 100%;
     white-space: nowrap;
@@ -47,9 +48,4 @@
     :host-context(tui-textfield[data-mode='onDark']) & {
         color: var(--tui-text-03-night);
     }
-}
-
-.t-inline {
-    display: inline-block;
-    vertical-align: middle;
 }
